--- a/FluentValidationExample.Common/FluentValidationExample.Common.csproj
+++ b/FluentValidationExample.Common/FluentValidationExample.Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
   </ItemGroup>
 
